--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
   "bugs": {
     "url": "https://github.com/your-org/display-management-system/issues"
   },
-  "homepage": "https://github.com/your-org/display-management-system#readme"
+  "homepage": "https://github.com/your-org/display-management-system#readme",
+  "dependencies": {
+    "mqtt": "^5.13.1"
+  }
 }
